--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,500&display=swap">
 </head>
 <body>
     <nav class="nav">
@@ -20,17 +21,17 @@
     <br>
     <br>
 
-    <h1 style="text-align: center; color: #00000042;">AMOS TOLUWALASE</h1>
+    <h1 style="text-align: center; color: #00000042; font-family: Roboto;">AMOS TOLUWALASE</h1>
     
-        <h1 style="padding: 0 20%; text-align: center;";>CONTACT</h1>
+        <h1 style="padding: 0 20%; text-align: center; font-family: Roboto;";>CONTACT</h1>
 
-    <p style="display: block; font-size: 30px; padding: 5px 20%;">
+    <p style="display: block; font-size: 30px; padding: 5px 20%; font-family: Roboto;">
         I'm a passionate web developer with a strong dedication to creating engaging and user-friendly online experiences.
         With a keen eye for detail and a love for problem-solving, I strive to craft websites that not only look visually
         appealing but also deliver seamless functionality. </p>
         <div id="form">
             <br>
-        <h2 style="font-size: 45px;">Let's Connect</h2>
+        <h2 style="font-size: 45px; font-family: Roboto;">Let's Connect</h2>
         <form class="contactform">
             <label for="Name">First Name</label>
             <input type="text"; placeholder="John">
