--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>html workshop</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,500&display=swap">
   </head>
   <body>
     <nav class="nav">
@@ -19,10 +20,12 @@
     </nav>
     <br>
     <br>
-    <h2 style="color: blue; text-align: center; font-family: verdana; font-size: 40px;">Hello World</h2>
+    <h2 style="color: blue; text-align: center; font-family: Roboto; font-size: 40px;">Hello World</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <br>
+    <div class="iimage">
     <img src="./2b4c1a4671c2182157cad1a49f94fa9c.png"; height="300px"; width="700px";>
+    </div>
     <br>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet non alias possimus a voluptates recusandae repellendus adipisci nam. Optio, ut voluptate fugit accusantium amet tempore maiores nostrum assumenda corrupti, nobis, quasi iure. Totam.</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore ullam quo doloribus. Provident fugit molestiae facilis dolorem debitis modi consectetur!</p>
